Merge remote-tracking branch 'origin/nightly' into cf-module-rework